--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+fastapi
+uvicorn
 pandas>=2.0.0
 numpy>=1.24.0
 scikit-learn>=1.0.0
@@ -5,4 +7,6 @@ matplotlib>=3.7.0
 seaborn>=0.12.0
 openpyxl>=3.0.0
 langchain
-openai 
+openai
+joblib
+python-dotenv 
