--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
-fastapi
-uvicorn
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
 pandas>=2.0.0
 numpy>=1.24.0
 scikit-learn>=1.0.0
 matplotlib>=3.7.0
 seaborn>=0.12.0
 openpyxl>=3.0.0
-langchain
-langchain-community
-langchain-openai
-openai
-joblib
-python-dotenv
-xgboost
-python-multipart   
+langchain==0.1.0
+langchain-community==0.0.10
+langchain-openai==0.0.5
+openai==1.3.7
+joblib==1.3.2
+python-dotenv==1.0.0
+xgboost==2.0.2
+python-multipart==0.0.6
 xlrd>=2.0.1
-yfinance 
+yfinance==0.2.18
+lightgbm>=4.0.0 
