--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ openpyxl>=3.0.0
 langchain==0.1.0
 langchain-community==0.0.10
 langchain-openai==0.0.5
-openai==1.3.7
+openai>=1.10.0,<2.0.0
 joblib==1.3.2
 python-dotenv==1.0.0
 xgboost==2.0.2
