--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,14 @@ scikit-learn>=1.0.0
 matplotlib>=3.7.0
 seaborn>=0.12.0
 openpyxl>=3.0.0
-langchain==0.1.0
-langchain-community==0.0.10
-langchain-openai==0.0.5
+langchain>=0.2.0
+langchain-community>=0.2.0
+langchain-openai>=0.1.0
 openai>=1.10.0,<2.0.0
 joblib==1.3.2
 python-dotenv==1.0.0
-xgboost==2.0.2
+xgboost>=2.0.0
 python-multipart==0.0.6
 xlrd>=2.0.1
-yfinance==0.2.18
+yfinance>=0.2.0
 lightgbm>=4.0.0 
