--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ langchain-openai>=0.1.0
 openai>=1.10.0,<2.0.0
 joblib==1.3.2
 python-dotenv==1.0.0
-xgboost>=2.0.0
+# xgboost>=2.0.0  # Removed - using LightGBM only
 python-multipart==0.0.6
 xlrd>=2.0.1
 yfinance>=0.2.0
